hard-gists/1025525/run.log
=== Docker Run Log for 1025525 ===
Started at: Mi 29. Okt 11:45:23 CET 2025

[2025-10-29 11:45:23] START: Running container for 1025525
[2025-10-29 11:45:23] SUCCESS: Container 5b703be4fee5826d53f2fb79aec555dd019e008ec09e7dfa5c3dba29747ebacf started for 1025525
=== Container logs for 1025525 ===
  File "/snippet.py", line 40
    print repr(row)
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1025525 ===
[2025-10-29 11:45:25] INFO: Container 5b703be4fee5826d53f2fb79aec555dd019e008ec09e7dfa5c3dba29747ebacf has stopped
